--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -304,7 +304,11 @@
     "0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
     "```\n",
     "\n",
-    "https://api.blockcypher.com/v1/btc/test3/blocks/0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
+    "Merkle Root:\n",
+    "```\n",
+    "4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301\n",
+    "```\n",
+    "as seen here: https://api.blockcypher.com/v1/btc/test3/blocks/0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
     "\n",
     "Transaction Hashes:\n",
     "```\n",
@@ -321,7 +325,7 @@
     "3311f8acc57e8a3e9b68e2945fb4f53c07b0fa4668a7e5cda6255c21558c774d\n",
     "```\n",
     "\n",
-    "#### 4.2. Make [this tests](/edit/session7/block.py) pass.\n",
+    "#### 4.2. Make [this test](/edit/session7/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_validate_merkle_root\n",
     "```"
@@ -336,6 +340,8 @@
     "# Exercise 4.1\n",
     "\n",
     "from helper import double_sha256, merkle_root\n",
+    "\n",
+    "want = bytes.fromhex('4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301')\n",
     "\n",
     "tx_hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
@@ -353,7 +359,7 @@
     "\n",
     "# bytes.fromhex and reverse ([::-1]) to get all the hashes in binary\n",
     "# get the merkle root\n",
-    "# hex() the reversed root"
+    "# see if the reversed root is the same as the wanted root"
    ]
   },
   {
@@ -762,16 +768,10 @@
     "msg = bytes.fromhex('f9beb4d976657261636b000000000000000000005df6e0e2')\n",
     "\n",
     "# first 4 are network magic\n",
-    "magic = msg[:4]\n",
     "# next 12 are command\n",
-    "command = msg[4:16]\n",
     "# next 4 are payload length\n",
-    "payload_length = msg[16:20]\n",
     "# next 4 are checksum\n",
-    "checksum = msg[20:24]\n",
-    "# rest is payload\n",
-    "payload = msg[24:]\n",
-    "print(command)"
+    "# rest is payload"
    ]
   },
   {
@@ -840,7 +840,7 @@
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
     "node.send(b'version', VersionMessage().serialize())\n",
-    "node.wait_for_commands([b'verack'])"
+    "print(node.wait_for_commands([b'verack']))"
    ]
   },
   {
