--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -417,7 +417,11 @@
     "0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
     "```\n",
     "\n",
-    "https://api.blockcypher.com/v1/btc/test3/blocks/0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
+    "Merkle Root:\n",
+    "```\n",
+    "4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301\n",
+    "```\n",
+    "as seen here: https://api.blockcypher.com/v1/btc/test3/blocks/0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
     "\n",
     "Transaction Hashes:\n",
     "```\n",
@@ -449,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301\n"
+      "True\n"
      ]
     }
    ],
@@ -457,6 +461,8 @@
     "# Exercise 4.1\n",
     "\n",
     "from helper import double_sha256, merkle_root\n",
+    "\n",
+    "want = bytes.fromhex('4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301')\n",
     "\n",
     "tx_hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
@@ -476,8 +482,8 @@
     "hashes = [bytes.fromhex(h)[::-1] for h in tx_hex_hashes]\n",
     "# get the merkle root\n",
     "root = merkle_root(hashes)\n",
-    "# hex() the reversed root\n",
-    "print(root[::-1].hex())"
+    "# see if the reversed root is the same as the wanted root\n",
+    "print(root[::-1] == want)"
    ]
   },
   {
@@ -491,7 +497,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -607,7 +613,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -860,7 +866,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -1035,7 +1041,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -1110,12 +1116,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
      ]
@@ -1202,21 +1208,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sending: version: 7f11010000000000000000003e73835b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d20921c3dac796411b61b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
-      "receiving: version: 7f1101000d040000000000003f73835b00000000000000000000000000000000000000000000ffff4830fd33d9de0d04000000000000000000000000000000000000000000000000794c3d2955243bb0102f5361746f7368693a302e31362e302fd483150001\n",
+      "sending: version: 7f1101000000000000000000d393885b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d20e59f757cbe70531f1b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
+      "receiving: version: 7f1101000d04000000000000d593885b00000000000000000000000000000000000000000000ffff4830fd33cd510d04000000000000000000000000000000000000000000000000aa6468d82f0a17c9102f5361746f7368693a302e31362e302f4f8b150001\n",
       "sending: verack: \n",
-      "receiving: verack: \n"
+      "receiving: verack: \n",
+      "verack: \n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "verack: "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1227,7 +1224,7 @@
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
     "node.send(b'version', VersionMessage().serialize())\n",
-    "node.wait_for_commands([b'verack'])"
+    "print(node.wait_for_commands([b'verack']))"
    ]
   },
   {
@@ -1248,17 +1245,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sending: version: 7f11010000000000000000003f73835b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d20016e614f1d36f5d71b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
-      "receiving: version: 7f1101000d040000000000003f73835b00000000000000000000000000000000000000000000ffff4830fd33d9df0d0400000000000000000000000000000000000000000000000081aefd7f74e46cee102f5361746f7368693a302e31362e302fd483150001\n",
+      "sending: version: 7f1101000000000000000000d893885b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d20ce3b2913422d73b71b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
+      "receiving: version: 7f1101000d04000000000000db93885b00000000000000000000000000000000000000000000ffff4830fd33cd530d04000000000000000000000000000000000000000000000000b6c6295bc74f423e102f5361746f7368693a302e31362e302f4f8b150001\n",
       "sending: verack: \n",
       "receiving: verack: \n",
       "sending: ping: 3132333435363738\n",
       "receiving: sendheaders: \n",
       "receiving: sendcmpct: 000200000000000000\n",
       "receiving: sendcmpct: 000100000000000000\n",
-      "receiving: ping: d34800b87e23dbb2\n",
-      "sending: pong: d34800b87e23dbb2\n",
-      "receiving: addr: 013f73835b0d0400000000000000000000000000000000ffffa2d49eac479d\n",
+      "receiving: ping: 8efe07942fb2d4e1\n",
+      "sending: pong: 8efe07942fb2d4e1\n",
+      "receiving: addr: 01db93885b0d0400000000000000000000000000000000ffffa2d49eac479d\n",
       "receiving: feefilter: e803000000000000\n",
       "receiving: pong: 3132333435363738\n"
      ]
