Fix for exercise 5.1

--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -584,7 +584,7 @@
     "total = 27\n",
     "\n",
     "# get the max_depth (math.ceil(math.log(total, 2)))\n",
-    "max_depth = math.ceil(math.log(num_items, 2))\n",
+    "max_depth = math.ceil(math.log(total, 2))\n",
     "# initialize the tree\n",
     "merkle_tree = []\n",
     "# range over all possible depths (0 to max_depth INCLUSIVE)\n",
