--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -20,6 +20,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1\n",
+    "\n",
+    "#### Check the cheat sheet for the network message structure.\n",
+    "\n",
+    "#### 1.1. Parse this message\n",
+    "```\n",
+    "f9beb4d976657261636b000000000000000000005df6e0e2\n",
+    "```\n",
+    "\n",
+    "#### 1.2. Make [these tests](/edit/session7/network.py) pass.\n",
+    "```\n",
+    "network.py:NetworkTest:test_parse\n",
+    "network.py:NetworkTest:test_serialize\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 1.1\n",
+    "\n",
+    "msg = bytes.fromhex('f9beb4d976657261636b000000000000000000005df6e0e2')\n",
+    "\n",
+    "# first 4 are network magic\n",
+    "# next 12 are command\n",
+    "# next 4 are payload length\n",
+    "# next 4 are checksum\n",
+    "# rest is payload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 1.2\n",
+    "\n",
+    "reload(network)\n",
+    "run_test(network.NetworkEnvelopeTest('test_parse'))\n",
+    "run_test(network.NetworkEnvelopeTest('test_serialize'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
+    "\n",
+    "#### 2.1. Make [this test](/edit/session7/network.py) pass.\n",
+    "```\n",
+    "network.py:VersionMessageTest:test_serialize\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2.1\n",
+    "\n",
+    "reload(network)\n",
+    "run_test(network.VersionMessageTest('test_serialize'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3\n",
+    "\n",
+    "#### 3.1. Make [this test](/edit/session7/network.py) pass.\n",
+    "```\n",
+    "network.py:GetHeadersMessageTest:test_serialize\n",
+    "```\n",
+    "\n",
+    "#### 3.2. Make [this test](/edit/session7/network.py) pass.\n",
+    "```\n",
+    "network.py:HeadersMessageTest:test_parse\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 3.1\n",
+    "\n",
+    "reload(network)\n",
+    "run_test(network.GetHeadersMessageTest('test_serialize'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 3.2\n",
+    "\n",
+    "reload(network)\n",
+    "run_test(network.HeadersMessageTest('test_parse'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handshake Example\n",
+    "\n",
+    "from network import SimpleNode, VersionMessage\n",
+    "\n",
+    "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
+    "\n",
+    "version = VersionMessage()\n",
+    "node.send(version.command, version.serialize())\n",
+    "print(node.wait_for_commands([b'verack']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 4\n",
+    "\n",
+    "#### 4.1. Make [this test](/edit/session7/network.py) pass.\n",
+    "```\n",
+    "network.py:SimpleNodeTest:test_handshake\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 4.1\n",
+    "\n",
+    "reload(network)\n",
+    "run_test(network.SimpleNodeTest('test_handshake'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block Header Download Example\n",
+    "\n",
+    "from block import GENESIS_BLOCK_HASH\n",
+    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
+    "\n",
+    "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
+    "node.handshake()\n",
+    "last_block_hash = GENESIS_BLOCK_HASH\n",
+    "count = 1\n",
+    "for _ in range(20):\n",
+    "    getheaders = GetHeadersMessage(start_block=last_block_hash)\n",
+    "    node.send(getheaders.command, getheaders.serialize())\n",
+    "    headers_envelope = node.wait_for_commands([b'headers'])\n",
+    "    headers_message = HeadersMessage.parse(headers_envelope.stream())\n",
+    "    for b in headers_message.blocks:\n",
+    "        if not b.check_pow():\n",
+    "            raise RuntimeError('bad proof of work at block {}'.format(count))\n",
+    "        if last_block_hash != GENESIS_BLOCK_HASH and b.prev_block != last_block_hash:\n",
+    "            raise RuntimeError('discontinuous block at {}'.format(count))\n",
+    "        count += 1\n",
+    "        last_block_hash = b.hash()\n",
+    "        if count % 2016 == 0:\n",
+    "            print(b.hash().hex())\n",
+    "    if len(headers_message.blocks) < 2000:\n",
+    "        break"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -40,15 +229,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
+    "### Exercise 5\n",
     "\n",
-    "#### 1.1. Calculate the Merkle parent of these hashes:\n",
+    "#### 5.1. Calculate the Merkle parent of these hashes:\n",
     "```\n",
     "f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0\n",
     "3d238a92a94532b946c90e19c49351c763696cff3db400485b813aecb8a13181\n",
     "```\n",
     "\n",
-    "#### 1.2. Make [this test](/edit/session7/helper.py) pass\n",
+    "#### 5.2. Make [this test](/edit/session7/helper.py) pass\n",
     "```\n",
     "helper.py:HelperTest:test_merkle_parent\n",
     "```"
@@ -60,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.1\n",
+    "# Exercise 5.1\n",
     "\n",
     "from helper import double_sha256\n",
     "\n",
@@ -78,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.2\n",
+    "# Exercise 5.2\n",
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_parent'))"
@@ -114,9 +303,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
+    "### Exercise 6\n",
     "\n",
-    "#### 2.1. Calculate the next Merkle Parent Level given these hashes\n",
+    "#### 6.1. Calculate the next Merkle Parent Level given these hashes\n",
     "```\n",
     "8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd\n",
     "7f4e6f9e224e20fda0ae4c44114237f97cd35aca38d83081c9bfd41feb907800\n",
@@ -125,7 +314,7 @@
     "43e7274e77fbe8e5a42a8fb58f7decdb04d521f319f332d88e6b06f8e6c09e27\n",
     "```\n",
     "\n",
-    "#### 2.2. Make [this test](/edit/session7/helper.py) pass.\n",
+    "#### 6.2. Make [this test](/edit/session7/helper.py) pass.\n",
     "```\n",
     "helper.py:HelperTest:test_merkle_parent_level\n",
     "```"
@@ -137,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.1\n",
+    "# Exercise 6.1\n",
     "\n",
     "from helper import merkle_parent\n",
     "\n",
@@ -164,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.2\n",
+    "# Exercise 6.2\n",
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_parent_level'))"
@@ -205,9 +394,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
+    "### Exercise 7\n",
     "\n",
-    "#### 3.1. Calculate the Merkle Root given these hashes\n",
+    "#### 7.1. Calculate the Merkle Root given these hashes\n",
     "```\n",
     "42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e\n",
     "94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4\n",
@@ -222,7 +411,7 @@
     "3311f8acc57e8a3e9b68e2945fb4f53c07b0fa4668a7e5cda6255c21558c774d\n",
     "```\n",
     "\n",
-    "#### 3.2. Make [this test](/edit/session7/helper.py) pass.\n",
+    "#### 7.2. Make [this test](/edit/session7/helper.py) pass.\n",
     "```\n",
     "helper.py:HelperTest:test_merkle_root\n",
     "```"
@@ -234,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3.1\n",
+    "# Exercise 7.1\n",
     "\n",
     "from helper import double_sha256, merkle_parent_level\n",
     "hex_hashes = [\n",
@@ -264,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3.2\n",
+    "# Exercise 7.2\n",
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_root'))"
@@ -296,9 +485,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4\n",
+    "### Exercise 8\n",
     "\n",
-    "#### 4.1. Validate the merkle root for this block on Testnet:\n",
+    "#### 8.1. Validate the merkle root for this block on Testnet:\n",
     "Block Hash:\n",
     "```\n",
     "0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
@@ -325,7 +514,7 @@
     "3311f8acc57e8a3e9b68e2945fb4f53c07b0fa4668a7e5cda6255c21558c774d\n",
     "```\n",
     "\n",
-    "#### 4.2. Make [this test](/edit/session7/block.py) pass.\n",
+    "#### 8.2. Make [this test](/edit/session7/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_validate_merkle_root\n",
     "```"
@@ -337,7 +526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.1\n",
+    "# Exercise 8.1\n",
     "\n",
     "from helper import double_sha256, merkle_root\n",
     "\n",
@@ -368,7 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.2\n",
+    "# Exercise 8.2\n",
     "\n",
     "reload(block)\n",
     "run_test(block.BlockTest('test_validate_merkle_root'))"
@@ -401,11 +590,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 5\n",
+    "### Exercise 9\n",
     "\n",
-    "#### 5.1. Create a Merkle Tree with 27 items.\n",
+    "#### 9.1. Create a Merkle Tree with 27 items.\n",
     "\n",
-    "#### 5.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
+    "#### 9.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
     "```\n",
     "merkleblock.py:MerkleTreeTest:test_init\n",
     "```"
@@ -417,7 +606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 5.1\n",
+    "# Exercise 9.1\n",
     "\n",
     "import math\n",
     "\n",
@@ -440,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 5.2\n",
+    "# Exercise 9.2\n",
     "\n",
     "reload(merkleblock)\n",
     "run_test(merkleblock.MerkleTreeTest('test_init'))"
@@ -543,9 +732,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 6\n",
+    "### Exercise 10\n",
     "\n",
-    "#### 6.1. Populate this Merkle Tree given the 8 hashes\n",
+    "#### 10.1. Populate this Merkle Tree given the 8 hashes\n",
     "Transaction Hashes:\n",
     "```\n",
     "42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e\n",
@@ -558,7 +747,7 @@
     "921b8cfd3e14bf41f028f0a3aa88c813d5039a2b1bceb12208535b0b43a5d09e\n",
     "```\n",
     "\n",
-    "#### 6.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
+    "#### 10.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
     "```\n",
     "merkleblock.py:MerkleTreeTest:test_populate_tree_1\n",
     "```"
@@ -570,7 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.1\n",
+    "# Exercise 10.1\n",
     "from merkleblock import MerkleTree\n",
     "from helper import merkle_parent\n",
     "\n",
@@ -592,9 +781,9 @@
     "    # else\n",
     "        # get the left and right hashes\n",
     "        # we need both left and right to compute the current node\n",
-    "        # if we don't have the left hash\n",
+    "        # if left is missing\n",
     "            # navigate to the left\n",
-    "        # if we don't have the right hash\n",
+    "        # if right is missing\n",
     "            # navigate to the right\n",
     "        # else\n",
     "            # combine left and right to set the current one\n",
@@ -608,7 +797,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.2\n",
+    "# Exercise 10.2\n",
     "\n",
     "reload(merkleblock)\n",
     "run_test(merkleblock.MerkleTreeTest('test_populate_tree_1'))"
@@ -668,9 +857,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 7\n",
+    "### Exercise 11\n",
     "\n",
-    "#### 7.1. Populate this Merkle Tree given the 5 hashes\n",
+    "#### 11.1. Populate this Merkle Tree given the 5 hashes\n",
     "Transaction Hashes:\n",
     "```\n",
     "42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e\n",
@@ -680,7 +869,7 @@
     "62af110031e29de1efcad103b3ad4bec7bdcf6cb9c9f4afdd586981795516577\n",
     "```\n",
     "\n",
-    "#### 7.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
+    "#### 11.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
     "```\n",
     "merkleblock.py:MerkleTreeTest:test_populate_tree_2\n",
     "```"
@@ -692,7 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.1\n",
+    "# Exercise 11.1\n",
     "from merkleblock import MerkleTree\n",
     "from helper import merkle_parent\n",
     "\n",
@@ -710,11 +899,12 @@
     "        # navigate up\n",
     "    # else\n",
     "        # get the left hash\n",
+    "        left_hash = tree.get_left_node()\n",
     "        # check to see if we have the left one\n",
     "            # navigate to the left\n",
-    "        # check to see if the right one exists\n",
+    "        # else if right node exists\n",
     "            # if the right one exists, then we need to combine left and right\n",
-    "            # check to see if the right one is defined\n",
+    "            # check to see if the right one is computed\n",
     "                # navigate to the right one\n",
     "            # else\n",
     "                # combine left and right\n",
@@ -731,145 +921,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.2\n",
+    "# Exercise 11.2\n",
     "\n",
     "reload(merkleblock)\n",
     "run_test(merkleblock.MerkleTreeTest('test_populate_tree_2'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 8\n",
-    "\n",
-    "#### Check the cheat sheet for the network message structure.\n",
-    "\n",
-    "#### 8.1. Parse this message\n",
-    "```\n",
-    "f9beb4d976657261636b000000000000000000005df6e0e2\n",
-    "```\n",
-    "\n",
-    "#### 8.2. Make [these tests](/edit/session7/network.py) pass.\n",
-    "```\n",
-    "network.py:NetworkTest:test_parse\n",
-    "network.py:NetworkTest:test_serialize\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 8.1\n",
-    "\n",
-    "msg = bytes.fromhex('f9beb4d976657261636b000000000000000000005df6e0e2')\n",
-    "\n",
-    "# first 4 are network magic\n",
-    "# next 12 are command\n",
-    "# next 4 are payload length\n",
-    "# next 4 are checksum\n",
-    "# rest is payload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 8.2\n",
-    "\n",
-    "reload(network)\n",
-    "run_test(network.NetworkEnvelopeTest('test_parse'))\n",
-    "run_test(network.NetworkEnvelopeTest('test_serialize'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 9\n",
-    "\n",
-    "#### 9.1. Make [this test](/edit/session7/network.py) pass.\n",
-    "```\n",
-    "network.py:VersionMessageTest:test_serialize\n",
-    "```\n",
-    "#### 9.2. Make [this test](/edit/session7/network.py) pass.\n",
-    "```\n",
-    "network.py:GetHeadersMessageTest:test_serialize\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 9.1\n",
-    "\n",
-    "reload(network)\n",
-    "run_test(network.VersionMessageTest('test_serialize'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 9.2\n",
-    "\n",
-    "reload(network)\n",
-    "run_test(network.GetHeadersMessageTest('test_serialize'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Handshake Example\n",
-    "\n",
-    "from network import SimpleNode, VersionMessage\n",
-    "\n",
-    "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
-    "\n",
-    "node.send(b'version', VersionMessage().serialize())\n",
-    "print(node.wait_for_commands([b'verack']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 10\n",
-    "\n",
-    "#### 10.1. Get a response from the server. You will have to edit [this](/edit/session7/network.py).\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 10.1\n",
-    "\n",
-    "reload(network)\n",
-    "\n",
-    "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
-    "node.handshake()\n",
-    "nonce = b'12345678'\n",
-    "node.send(b'ping', nonce)\n",
-    "envelope = node.wait_for_commands([b'pong'])\n",
-    "\n",
-    "if envelope.payload != nonce:\n",
-    "    raise RuntimeError('bad nonce: {} vs {}'.format(nonce, envelope.payload))"
    ]
   }
  ],
