--- a/session5/complete/distribute.ipynb
+++ b/session5/complete/distribute.ipynb
@@ -20,11 +20,15 @@
     "secret = little_endian_to_int(double_sha256(passphrase))\n",
     "priv = PrivateKey(secret=secret)\n",
     "my_address = priv.point.address(testnet=True)\n",
+    "print(my_address)\n",
     "target_amount = 0.1\n",
     "fee = 0.005\n",
     "\n",
     "response = requests.get('https://testnet.blockexplorer.com/api/addr/{}/utxo'.format(my_address))\n",
     "utxos = response.json()\n",
+    "\n",
+    "if (len(utxos) == 0):\n",
+    "    raise RuntimeError('no outputs!')\n",
     "\n",
     "student_addresses = 'mtShBfBH9LFyHmqJFuKjmAPfv6jJmwpbeV'\n",
     "# initialize inputs\n",
@@ -116,7 +120,7 @@
     "# initialize inputs\n",
     "tx_ins = []\n",
     "total = 0\n",
-    "for utxo in utxos[0:1]:\n",
+    "for utxo in utxos:\n",
     "    prev_tx = bytes.fromhex(utxo['txid'])\n",
     "    prev_index = utxo['vout']\n",
     "    total += utxo['amount']\n",
