--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -231,7 +231,7 @@
     "# Exercise 4.1\n",
     "\n",
     "reload(network)\n",
-    "run_test(network.HeadersMessageTest('test_parse'))"
+    "run_test(network.GetDataMessageTest('test_serialize'))"
    ]
   },
   {
@@ -240,28 +240,7 @@
    "source": [
     "### Exercise 5\n",
     "\n",
-    "#### 5.1. Make [this test](/edit/session8/network.py) pass."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 5.1\n",
-    "\n",
-    "reload(network)\n",
-    "run_test(network.GetDataMessageTest('test_serialize'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 6\n",
-    "\n",
-    "#### 6.1. Make [this test](/edit/session8/merkleblock.py) pass."
+    "#### 5.1. Make [this test](/edit/session8/merkleblock.py) pass."
    ]
   },
   {
@@ -278,9 +257,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 7\n",
+    "### Exercise 6\n",
     "\n",
-    "#### 7.1. You have been sent some unknown amount of testnet bitcoins to your address. \n",
+    "#### 6.1. You have been sent some unknown amount of testnet bitcoins to your address. \n",
     "\n",
     "Send all of it back (minus fees) to `mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv` using only the networking protocol."
    ]
@@ -291,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.1\n",
+    "# Exercise 6.1\n",
     "\n",
     "import time\n",
     "\n",
@@ -312,10 +291,11 @@
     "from tx import Tx, TxIn, TxOut\n",
     "\n",
     "last_block_hex = '<fill this in>'\n",
+    "secret = -1  # fill this in\n",
     "\n",
-    "secret = -1 # fill this out\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
+    "print(addr)\n",
     "h160 = decode_base58(addr)\n",
     "\n",
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
@@ -331,8 +311,8 @@
     "# complete the handshake\n",
     "# load the bloom filter with the filterload command\n",
     "\n",
-    "# set starting block to last_block from above\n",
-    "# send a getheaders message with the starting block\n",
+    "# set start block to last_block from above\n",
+    "# send a getheaders message with the start block\n",
     "\n",
     "# wait for the headers message\n",
     "\n",
@@ -349,7 +329,7 @@
     "# send the getdata message\n",
     "\n",
     "# initialize prev_tx, prev_index and pt to None\n",
-    "# loop while prev_tx is None \n",
+    "# while prev_tx is None \n",
     "    # wait for the merkleblock or tx commands\n",
     "    # initialize the stream from the envelope\n",
     "    # if we have the merkleblock command\n",
@@ -381,6 +361,13 @@
     "else:\n",
     "    print(envelope.payload)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
